[package]
name = "string-sharp"
version = "0.1.5"
edition = "2021"
description = "traits implementing on string similar to c#"
license = "MIT"
# donate_litecoin = LRyqEsNLk8rvVVkSqMrrXG82mqjpsVXvEH 
# donate_paypal = https://www.paypal.com/donate/?business=A9BBJRDL8QG9J&no_recurring=0&item_name=support+for+open+source&currency_code=USD
# if you find this useful, please donate to support the project
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.23"
